--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,6 +8,8 @@ tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
 tauri = { version = "1.5", features = [] }
+serde = { version = "1.0", features = ["derive"] }
+monitor = { path = "monitor" }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
