--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2021"
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = [] }
-serde = { version = "1.0", features = ["derive"] }
 monitor = { path = "monitor" }
+serde = { version = "1.0", features = ["derive"] }
+tauri = { version = "1.5", features = [] }
+uuid = { version = "1.6", features = ["v4"] }
+windows-version = "0.1"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
