--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "check": "tsc"
+    "check": "tsc",
+    "fmt": "prettier -w src"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.5.0",
+    "mobx": "^6.11.0",
+    "mobx-react-lite": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.23.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "prettier": "^3.1.0",
     "typescript": "^5.0.0",
-    "vite": "^4.4.0"
+    "vite": "^4.5.0"
   }
 }
