--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,6 +13,12 @@ tauri = { version = "1.5", features = [] }
 uuid = { version = "1.6", features = ["v4"] }
 windows-version = "0.1"
 
+[dependencies.windows]
+version = "0.52"
+features = [
+    "UI_ViewManagement"
+]
+
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
 # DO NOT REMOVE!!
