--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,11 +12,16 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.5", features = [] }
 uuid = { version = "1.6", features = ["v4"] }
 windows-version = "0.1"
+raw-window-handle = "0.5"
 
 [dependencies.windows]
 version = "0.52"
 features = [
-    "UI_ViewManagement"
+    "UI_ViewManagement",
+    "Win32_Foundation",
+    "Win32_Graphics_Dwm",
+    "Win32_UI_Controls",
+    "Win32_UI_WindowsAndMessaging",
 ]
 
 [features]
