--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,7 +10,7 @@ tauri-build = { version = "1.5", features = [] }
 monitor = { path = "monitor" }
 raw-window-handle = "0.5"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5", features = [] }
+tauri = { version = "1.5", features = [ "window-hide", "system-tray", "window-set-size"] }
 
 [dependencies.windows]
 version = "0.52"
@@ -18,6 +18,7 @@ features = [
     "UI_ViewManagement",
     "Win32_Foundation",
     "Win32_Graphics_Dwm",
+    "Win32_Graphics_Gdi",
     "Win32_UI_Controls",
     "Win32_UI_WindowsAndMessaging",
 ]
