ensure_windows_version

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,6 +11,7 @@ monitor = { path = "monitor" }
 raw-window-handle = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.5", features = [ "window-hide", "system-tray", "window-set-size"] }
+windows-version = "0.1"
 
 [dependencies.windows]
 version = "0.52"
