--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "babel-plugin-jsx-classlist": "^1.0.0",
     "prettier": "^3.1.0",
     "typescript": "^5.0.0",
     "vite": "^4.5.0"
