--- a/package.json
+++ b/package.json
@@ -12,19 +12,12 @@
   "dependencies": {
     "@emotion/css": "^11.11.0",
     "@tauri-apps/api": "^1.5.0",
-    "classnames": "^2.3.0",
-    "mobx": "^6.11.0",
-    "mobx-react-lite": "^4.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "@vueuse/core": "^10.6.0",
+    "vue": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.23.0",
-    "@emotion/babel-plugin": "^11.11.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "babel-plugin-jsx-classlist": "^1.0.0",
+    "@types/lodash-es": "^4.17.12",
+    "@vitejs/plugin-vue": "^4.5.0",
     "prettier": "^3.1.0",
     "typescript": "^5.0.0",
     "vite": "^4.5.0"
