--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "fmt": "prettier -w src"
   },
   "dependencies": {
-    "@emotion/css": "^11.11.0",
     "@tauri-apps/api": "^1.5.0",
     "@vueuse/core": "^10.6.0",
     "vue": "^3.0.0"
@@ -19,6 +18,7 @@
     "@types/lodash-es": "^4.17.12",
     "@vitejs/plugin-vue": "^4.5.0",
     "prettier": "^3.1.0",
+    "sass": "^1.69.5",
     "typescript": "^5.0.0",
     "vite": "^4.5.0"
   }
