--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,7 +10,7 @@ tauri-build = { version = "1.5", features = [] }
 monitor = { path = "monitor" }
 raw-window-handle = "0.5"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5", features = [ "window-hide", "window-set-size", "system-tray", "icon-ico"] }
+tauri = { version = "1.5", features = ["wry", "window-hide", "window-set-size", "system-tray", "icon-ico"], default-features = false }
 windows-version = "0.1"
 
 [dependencies.windows]
