--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.5.0",
-    "@vueuse/core": "^10.6.0",
+    "lodash-es": "^4.17.21",
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.12",
     "@vitejs/plugin-vue": "^4.5.0",
     "prettier": "^3.1.0",
     "sass": "^1.69.5",
