--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "fmt": "prettier -w src"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.5.0",
-    "lodash-es": "^4.17.21",
-    "vue": "^3.0.0"
+    "@tauri-apps/api": "1.5.x",
+    "lodash-es": "4.x",
+    "vue": "3.x"
   },
   "devDependencies": {
-    "@types/lodash-es": "^4.17.12",
-    "@vitejs/plugin-vue": "^4.5.0",
-    "prettier": "^3.1.0",
-    "sass": "^1.69.5",
-    "typescript": "^5.0.0",
-    "vite": "^4.5.0"
+    "@types/lodash-es": "4.x",
+    "@vitejs/plugin-vue": "4.x",
+    "prettier": "3.x",
+    "rollup-plugin-visualizer": "5.x",
+    "sass": "^1.69.0",
+    "typescript": "5.x",
+    "vite": "4.x"
   }
 }
