--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
     - run: cargo check --release
       working-directory: src-tauri
       name: Check Rust
-    - run: cargo clippy --release
+    - run: cargo clippy --release -- -D clippy::all
       working-directory: src-tauri
       name: Clippy Rust
     - run: cargo fmt --check
