--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,29 +44,24 @@ jobs:
       name: Disable autocrlf
     - uses: actions/checkout@v4
       name: Checkout
-    - uses: ilammy/msvc-dev-cmd@v1
-      with:
-        arch: x86
-        sdk: 10.0.22621.0
-      name: Setup MSVC
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
         check-latest: true
         cache: npm
       name: Setup Node
-    - uses: dtolnay/rust-toolchain@master
+    - uses: dtolnay/rust-toolchain@stable
       with:
-        toolchain: stable-i686-pc-windows-msvc
+        targets: i686-pc-windows-msvc
       name: Setup Rust
     - run: npm ci
       name: Install NPM dependencies
     - run: cargo install tauri-cli --profile dev
       name: Install Tauri CLI
-    - run: cargo tauri build
+    - run: cargo tauri build --target i686-pc-windows-msvc
       name: Build
     - uses: actions/upload-artifact@v3
       with:
         name: artifact
-        path: src-tauri/target/release/brightness-tray.exe
+        path: src-tauri/target/i686-pc-windows-msvc/release/brightness-tray.exe
       name: Upload artifact
