--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "check": "tsc",
+    "check": "vue-tsc",
     "fmt": "prettier -w src",
     "lint": "eslint src",
     "devtools": "vue-devtools"
@@ -26,7 +26,7 @@
     "eslint-plugin-vue": "9.x",
     "prettier": "3.x",
     "sass": "^1.69.0",
-    "typescript": "5.2.x",
-    "vite": "4.x"
+    "vite": "4.x",
+    "vue-tsc": "1.x"
   }
 }
