--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tauri-apps/api": "1.5.x",
+    "core-js": "^3.34.0",
     "lodash-es": "4.x",
     "vue": "3.x"
   },
