--- a/src-tauri/monitor/Cargo.toml
+++ b/src-tauri/monitor/Cargo.toml
@@ -11,6 +11,7 @@ features = [
     "Win32_Graphics_Gdi",
     "Win32_Security",
     "Win32_System_Com",
+    "Win32_System_IO",
     "Win32_System_Ole",
     "Win32_System_Variant",
     "Win32_System_Wmi",
