--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,6 +12,7 @@ raw-window-handle = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_with = { version = "3.0", features = ["base64"] }
 tauri = { version = "1.5.x", features = ["wry", "window-set-focus", "window-set-position", "window-set-size", "window-show", "window-hide", "system-tray"], default-features = false }
+tokio = { version = "1.0", features = ["time"] }
 windows-version = "0.1"
 
 [dependencies.windows]
